cambio realizado en el index

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -74,7 +74,7 @@
 <body>
 
   <div class="carta">
-    <h1>✨ El Mago Interactivo ✨</h1>
+    <h1>✨App Magia Interactiva ✨</h1>
     <div id="instrucciones">
       <p id="paso">Haz clic para comenzar el truco...</p>
       <button onclick="siguientePaso()">▶️ Siguiente paso</button>
